Finished swagger documentation for the User.
