# src/routes/user.routes.js
@@ -6,7 +6,11 @@ import { UserController } from "../controllers/index";
 import { userSchema } from "../helpers/index";
 import dataValidation from "../middlewares/data-validation";
 import { checkAuth } from "../middlewares/auth-validation";
-import { onlySameUserCanDoThisAction } from "../middlewares/auth-permission";
+import {
+  onlySameUserCanDoThisAction,
+  onlyAdminCanDoThisAction,
+  onlySameUserOrAdminCanDoThisAction,
+} from "../middlewares/auth-permission";
 
 const router = new Router();
 const swaggerDocument = YAML.load("./swagger.yaml");
@@ -14,13 +18,9 @@ const swaggerDocument = YAML.load("./swagger.yaml");
 router
   .route("/get-users")
   .get(checkAuth)
+  .get(onlyAdminCanDoThisAction)
   .get(dataValidation(userSchema.userLIST, "query"))
   .get(UserController.getUsers);
-
-router
-  .route("/signup")
-  .post(dataValidation(userSchema.userSIGNUP, "body"))
-  .post(UserController.signup);
 
 router
   .route("/login")
@@ -31,6 +31,11 @@ router
   .route("/refresh-token")
   .post(dataValidation(userSchema.refreshTOKEN, "body"))
   .post(UserController.refreshToken);
+
+router
+  .route("/signup")
+  .post(dataValidation(userSchema.userSIGNUP, "body"))
+  .post(UserController.signup);
 
 router
   .route("/activate")
@@ -54,6 +59,13 @@ router
   .post(UserController.resetPassword);
 
 router
+  .route("/change-password/:id")
+  .patch(checkAuth)
+  .patch(onlySameUserCanDoThisAction)
+  .patch(dataValidation(userSchema.passwordCHANGE, "body"))
+  .patch(UserController.changePassword);
+
+router
   .route("/change-user-details/:id")
   .patch(checkAuth)
   .patch(onlySameUserCanDoThisAction)
@@ -68,24 +80,25 @@ router
   .patch(UserController.changeEmail);
 
 router
+  .route("/verify-email/:id")
+  .get(checkAuth)
+  .get(onlySameUserCanDoThisAction)
+  .get(dataValidation(userSchema.userACTIVATIONEMAIL, "params"))
+  .get(UserController.verifyEmail);
+
+router
   .route("/delete/:id")
   .delete(checkAuth)
-  .delete(onlySameUserCanDoThisAction)
+  .delete(onlySameUserOrAdminCanDoThisAction)
   .delete(dataValidation(userSchema.userDELETE, "body"))
   .delete(UserController.delete);
 
 router
   .route("/:id")
   .get(checkAuth)
+  .get(onlySameUserOrAdminCanDoThisAction)
   .get(dataValidation(userSchema.userDETAILS, "params"))
   .get(UserController.getUserDetails);
-
-router
-  .route("/verify-email/:id")
-  .get(checkAuth)
-  .get(onlySameUserCanDoThisAction)
-  .get(dataValidation(userSchema.userACTIVATIONEMAIL, "params"))
-  .get(UserController.verifyEmail);
 
 router.use("/", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
